--- a/hello-css.html
+++ b/hello-css.html
@@ -8,7 +8,7 @@
   <h1>Hello world</h1>
 
   <ul>
-    <li>Apple</li>
+    <li style="color:green">Apple</li>
     <li>Banana</li>
     <li>Orange</li>
     <li>Pear</li>
