Replace inline with style element

--- a/hello-css.html
+++ b/hello-css.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+<style>
+  li {
+    color: green
+  }
+</style>
 </head>
 
 <body>
   <h1>Hello world</h1>
 
   <ul>
-    <li style="color:green">Apple</li>
+    <li>Apple</li>
     <li>Banana</li>
     <li>Orange</li>
     <li>Pear</li>
