--- a/hello-css.html
+++ b/hello-css.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link href="main.css" rel="stylesheet">
 <style>
-  li {
-    color: green
-  }
+#favourite {
+  font-style: italic;
+}
 </style>
 </head>
 
@@ -12,19 +13,19 @@
   <h1>Hello world</h1>
 
   <ul>
-    <li>Apple</li>
-    <li>Banana</li>
+    <li class="green">Apple</li>
+    <li id="favourite" style="font-style:normal">Banana</li>
     <li>Orange</li>
-    <li>Pear</li>
-    <li>Grape</li>
+    <li class="green">Pear</li>
+    <li class="green">Grape</li>
   </ul>
 
   <ol>
-    <li>Apple</li>
+    <li class="green">Apple</li>
     <li>Banana</li>
     <li>Orange</li>
-    <li>Pear</li>
-    <li>Grape</li>
+    <li class="green">Pear</li>
+    <li class="green">Grape</li>
   </ol>
 
 </body>
